--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "webpack-dev-server --inline --content-base ./",
     "dev:test": "karma start --autoWatch",
     "test": "karma start --browsers PhantomJS --single-run",
-    "ci": "eslint src && npm run test",
+    "ci": "eslint src test && npm run test",
     "dist": "webpack"
   },
   "author": "xuscrus@gmail.com",
@@ -18,6 +18,7 @@
     "babel-preset-es2015": "^6.18.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
     "jasmine-core": "^2.5.2",
     "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
